--- a/index.html
+++ b/index.html
@@ -47,43 +47,34 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
 });
 });});
 </script>
-
-
-
   </head>
   <body ng-app="">
 
-
-
-
-
-
-
-
-
-    
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Patiala school</a>
+	      <a class="navbar-brand" href="index.html"><font style="color: black">Patiala school</font></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-	        	<li class="nav-item"><a href="download.html" class="nav-link">Downloads</a></li>
-            <li class="nav-item"><a href="donate.html" class="nav-link">Donate</a></li>
-	          <li class="nav-item"><a href="index.html#contact" class="nav-link">Contact</a></li>
-            <li class="nav-item"><a  data-toggle="modal" href="#modal-login" class="nav-link">Login</a></li>
+	        	<li class="nav-item active"><a href="index.html" class="nav-link"><font style="color: black;">Home</font></a></li>
+	        	<li class="nav-item"><a href="about.html" class="nav-link"><font style="color: black;">About</font></a></li>
+	        	<li class="nav-item"><a href="gallery.html" class="nav-link"><font style="color: black;">Gallery</font></a></li>
+	        	<li class="nav-item"><a href="download.html" class="nav-link"><font style="color: black;">Downloads</font></a></li>
+            <li class="nav-item"><a href="donate.html" class="nav-link"><font style="color: black;">Donate</font></a></li>
+	          <li class="nav-item"><a href="index.html#contact" class="nav-link"><font style="color: black;">Contact</font></a></li>
+            <li class="nav-item"><a  data-toggle="modal" href="#modal-login" class="nav-link"><font style="color: black;">Login</font></a></li>
 	        </ul>
 	      </div>
 	    </div>
 	  </nav>
     <!-- END nav -->
 
+    <div class="container" style="width: 100%; margin-top: 6%">
+  		<img style="margin-left: 0%;" src="images/plogo.jpg"><img style="margin-left: 45%;"src="images/plogo2.jpg">
+  	</div>
 
     <!-- login box -->
 
