--- a/gallery.html
+++ b/gallery.html
@@ -54,12 +54,6 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
     <link rel="stylesheet" href="css/style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-
-
-
-
-
   </head>
   <body ng-app="">
     
@@ -72,19 +66,22 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-            <li class="nav-item active"><a href="gallery.html" class="nav-link">Gallery</a></li>
-            <li class="nav-item"><a href="download.html" class="nav-link">Downloads</a></li>
-            <li class="nav-item"><a href="donate.html" class="nav-link">Donate</a></li>
-            <li class="nav-item"><a href="index.html#contact" class="nav-link">Contact</a></li>
-            <li class="nav-item"><a  data-toggle="modal" href="#modal-login" class="nav-link">Login</a></li>
+	        	<li class="nav-item active"><a href="index.html" class="nav-link"><font style="color: black;">Home</font></a></li>
+            <li class="nav-item"><a href="about.html" class="nav-link"><font style="color: black;">About</font></a></li>
+            <li class="nav-item"><a href="gallery.html" class="nav-link"><font style="color: black;">Gallery</font></a></li>
+            <li class="nav-item"><a href="download.html" class="nav-link"><font style="color: black;">Downloads</font></a></li>
+            <li class="nav-item"><a href="donate.html" class="nav-link"><font style="color: black;">Donate</font></a></li>
+            <li class="nav-item"><a href="index.html#contact" class="nav-link"><font style="color: black;">Contact</font></a></li>
+            <li class="nav-item"><a  data-toggle="modal" href="#modal-login" class="nav-link"><font style="color: black;">Login</font></a></li>
 	        </ul>
 	      </div>
 	    </div>
 	  </nav>
     <!-- END nav -->
 
+    <div class="container" style="width: 100%; margin-top: 6%">
+      <img style="margin-left: 0%;" src="images/plogo.jpg"><img style="margin-left: 45%;"src="images/plogo2.jpg">
+    </div>
 
     <!-- login box -->
 
