--- a/index.html
+++ b/index.html
@@ -119,10 +119,6 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
 
     </section>
 
-
-
-
-    
     <section class="home-slider js-fullheight owl-carousel">
       <div class="slider-item js-fullheight" style="background-image:url(images/bg_1.jpg);">
       	<div class="overlay"></div>
@@ -144,7 +140,7 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
           <div class="col-md-7 text ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
             <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">adjudged as the BEST NGO in India</h1>
             <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">The President of India presented the award in Rashtrapati Bhawan, New Delhi in person to Col Karaminder Singh on 14 Nov 2015 at 1400 hrs.
-In 2014 we were adjudged as the best NGO of Punjab State.
+			In 2014 we were adjudged as the best NGO of Punjab State.
           </div>
         </div>
         </div>
@@ -188,7 +184,7 @@ In 2014 we were adjudged as the best NGO of Punjab State.
 		<section class="ftco-section ftc-no-pb">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-md-5 p-md-5 img img-2" style="background-image: url(images/about.jpg);">
+					<div class="col-md-5 p-md-5 img img-2" style="background-image: url(images/about.jpg);margin-bottom: 3%;margin-top: -5%">
 					</div>
 					<div class="col-md-7 wrap-about pb-md-5 ftco-animate">
 	          <div class="heading-section mb-5 pl-md-5 heading-section-with-line">
