--- a/download.html
+++ b/download.html
@@ -141,7 +141,7 @@ a.before:hover:before,a.after:hover:after{
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Patiala School</a>
+	      <a class="navbar-brand" href="index.html"><font style="color: black">Patiala school</font></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
