--- a/index.html
+++ b/index.html
@@ -204,7 +204,6 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
 			</div>
 		</section>
 
-
 		<section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
     	<div class="container">
     		<div class="row d-md-flex align-items-center justify-content-center">
@@ -252,7 +251,7 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
     	<div class="container">
     		<div class="row justify-content-center mb-5 pb-2">
           <div class="col-md-7 heading-section ftco-animate">
-            <h2 class="mb-4">Picture Gallery</h2>
+            <h2 style="margin-top: -5%; margin-left: -23%;" class="mb-4">Picture Gallery</h2>
             <p></p>
           </div>
         </div>
