--- a/gallery.html
+++ b/gallery.html
@@ -1828,6 +1828,8 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
+  <script src="common.js"></script>
+  <script src="commondirecting.js"></script>
     
   </body>
 </html>
