--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
 
     <a name="contact"></a>
 
-    <section class="ftco-section contact-section">
+    <section class="ftco-section contact-section" style="margin-top: -10%;">
       <div class="container">
         <div class="row d-flex contact-info">
           <div class="col-md-6 col-lg-3 d-flex">
@@ -447,7 +447,7 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
       </div>
     </section>
 
-		<section class="ftco-section contact-section">
+	<section class="ftco-section contact-section" style="margin-top: -12%;">
       <div class="container">
         
         <div class="row block-9">
