--- a/download.html
+++ b/download.html
@@ -220,47 +220,49 @@ a.before:hover:before,a.after:hover:after{
 			          </div>
 			          <div class="pr-md-5 mr-md-5">
 									<div class="wrapper">
-                  <a class="sixth before after" href="#">Donnners- MRS HARINDER SHERGILL- CHARANPREET KAUR 3RD CLASS</a>
+                    <b>
+                  <a class="sixth before after" href="#"><font style="color: orange;">Donnners- MRS HARINDER SHERGILL- CHARANPREET KAUR 3RD CLASS</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">Donners- S GURBIR SINGH DHILLON- GARIMA AND MANU SAINI(two sisters)</a>
+                  <a class="sixth before after" href="#"><font style="color: orange;">Donners- S GURBIR SINGH DHILLON- GARIMA AND MANU SAINI(two sisters)</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">Donnners- S GURDIP SINGH JI- PUSHKAR SETHI 4TH CLASS</a>
+                  <a class="sixth before after" href="#"><font style="color: orange;">Donnners- S GURDIP SINGH JI- PUSHKAR SETHI 4TH CLASS</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">SATRANGI FESTIVAL FOR SCHOOL</a>
+                  <a class="sixth before after" href="#"><font style="color: orange;">SATRANGI FESTIVAL FOR SCHOOL</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">SATRANGI FESTIVALS DOWNLOADS</a>
+                  <a class="sixth before after" href="#"><font style="color: orange;">SATRANGI FESTIVALS DOWNLOADS</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">BLIND BENEFICIARIES</a>
+                  <a class="sixth before after" href="#"><font style="color: orange;">BLIND BENEFICIARIES</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">DEAF BENEFICIARIES</a>
+                  <a class="sixth before after" href="#"><font style="color: orange;">DEAF BENEFICIARIES</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">PROJECT DETAILS</a>
+                  <a class="sixth before after" href="#"><font style="color: orange;">PROJECT DETAILS</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">BENEFICIARIES</a>
+                  <a class="sixth before after" href="#"><font style="color: orange;">BENEFICIARIES</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">BLIND DISABILITY CERTIFICATES</a>
+                  <a class="sixth before after" href="#"><font style="color: orange;">BLIND DISABILITY CERTIFICATES</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">DEAF DISABILITY CERTIFICATES</a>
+                  <a class="sixth before after" href="#"><font style="color: orange;">DEAF DISABILITY CERTIFICATES</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">ACTIVITY REPORT</a>
+                  <a class="sixth before after" href="#"><font style="color: orange;">ACTIVITY REPORT</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">BALANCE SHEETS</a>
+                  <a class="sixth before after" href="#"><font style="color: orange;">BALANCE SHEETS</font></a>
                   </div>
                   <div class="wrapper">
-                  <a class="sixth before after" href="#">STAFF</a>
-                  </div>	
+                  <a class="sixth before after" href="#"><font style="color: orange;">STAFF</font></a>
+                  </div>
+                  </b>	
 								</div>
 							</div>
 						</div>
