--- a/donate.html
+++ b/donate.html
@@ -231,7 +231,7 @@ a.before:hover:before,a.after:hover:after{
                   </div>
                 </div>
                 <div class="pr-md-5 mr-md-5">
-                  <p>The Deaf and Blind schools are not in receipt of any Grant from the Government or from any corporate body.
+                  <strong><p>The Deaf and Blind schools are not in receipt of any Grant from the Government or from any corporate body.
                       We need to raise finances so that we can provide the best residential education to these deprived children.</p>
                                         <p>•  Sponsor Education of deaf or blind child 
                          US Dollars - 300 per year or equivalent 
@@ -241,7 +241,7 @@ a.before:hover:before,a.after:hover:after{
                       • Share your joy and sorrows with the deaf and blind children with refreshments or meals.
                       • Donate rations.
                       • Donate and meet our daily needs and requirements.
-                      • Donate cash to meet our expenses.</p>         
+                      • Donate cash to meet our expenses.</p></strong>      
                 </div>
                 <div class="heading-section mb-md-5 pl-md-5 heading-section-with-line">
                   <div class="pr-md-5 mr-md-5">
@@ -249,13 +249,15 @@ a.before:hover:before,a.after:hover:after{
                   </div>
                   </div>
                   <div class="pr-md-5 mr-md-5">
+                    <strong>
                   <p>Society for Welfare of The Handicapped. It is registered with Govt. of India for Direct receipt of foreign funds from Any country worldwide direct into the following account.</p>
                   <p>Name of The Account  : Society for Welfare of The Handicapped Regd.<br>
                       Account Number         : Saving Account No. 65001479758<br>
                       Band name and branch : State Bank of India<br>
                       IFSC Code                 :SBIN0050012<br>
                       SWIFT Code              :SBININBBP03 (0-Zero)<br> 
-                      BRANCH Code             :50012</p>   
+                      BRANCH Code             :50012</p> 
+                      </strong>  
                 </div>
                 <div class="heading-section mb-md-5 pl-md-5 heading-section-with-line">
                   <div class="pr-md-5 mr-md-5">
@@ -263,16 +265,17 @@ a.before:hover:before,a.after:hover:after{
                   </div>
                   </div>
                   <div class="pr-md-5 mr-md-5">
-                 
+                 <strong>
                   <p>Name of the Account   : Society for Welfare of The Handicapped<br>
                       Account Number          : Saving Account No. 55076882917<br>
                       Bank name and branch : State Bank of India <br>
                       Branch Code               : 50453<br>
                       IFSC Code                  :SBIN0050453<br>
-                      MICR Code                  :147002040<br></p>  
+                      MICR Code                  :147002040<br></p>
+                      </strong>  
                 </div>
                 <div class="wrapper ruke">
-                  <a class="sixth before after" href="#">Download Bank Details here...</a>
+                  <a class="sixth before after" href="#"><strong>Download Bank Details here...</strong></a>
                   </div>    
 							</div>
 						</div>
