--- a/donate.html
+++ b/donate.html
@@ -28,6 +28,24 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
 });
 });});
 </script>
+<script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-database.js"></script>
+
+<script>
+
+  var firebaseConfig = {
+    apiKey: "AIzaSyDab5iXo67c3NYM9x9fMby-Sb9SRgAFyzg",
+    authDomain: "signup-29e25.firebaseapp.com",
+    databaseURL: "https://signup-29e25.firebaseio.com",
+    projectId: "signup-29e25",
+    storageBucket: "signup-29e25.appspot.com",
+    messagingSenderId: "175460446228",
+    appId: "1:175460446228:web:20c8638d03bca192"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+</script>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
