--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+
     <script>
     $(document).ready(function(){
 
@@ -65,9 +66,13 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
 
   firebase.initializeApp(firebaseConfig);
 </script>
+<script>
+  $(document).ready(function(){
+      $("#myModal").modal('show');
+  });
+</script>
   </head>
   <body ng-app="">
-
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html"><font style="color: black">Patiala school</font></a>
@@ -94,6 +99,29 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
   		<img style="margin-left: 0%;" src="images/plogo.jpg"><img style="margin-left: 45%;"src="images/plogo2.jpg">
   	</div>
 
+    <!-- Pop Up Modal-->
+    <div id="myModal" class="modal fade" style="background-color: red">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                  <h4 class="modal-title">Subscribe our Newsletter</h4>
+              </div>
+              <div class="modal-body">
+                  <p>Subscribe to our mailing list to get the latest updates straight in your inbox.</p>
+                  <form>
+                      <div class="form-group">
+                          <input type="text" class="form-control" placeholder="Name">
+                      </div>
+                      <div class="form-group">
+                          <input type="email" class="form-control" placeholder="Email Address">
+                      </div>
+                      <button type="submit" class="btn btn-primary">Subscribe</button>
+                  </form>
+              </div>
+          </div>
+      </div>
+    </div>
     <!-- login box -->
 
     <section>
