--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
 		            <div class="block-18 text-center">
 		              <div class="text">
 		                <strong class="number" data-number="56">0</strong>
-		                <span>Years of Experienced</span>
+		                <span>Years of Cost Free Service Provided</span>
 		              </div>
 		            </div>
 		          </div>
