--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
 	        <ul class="navbar-nav ml-auto">
 	        	<li class="nav-item active"><a href="index.html" class="nav-link"><font style="color: black;">Home</font></a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link"><font style="color: black;">About</font></a></li>
-	        	<li class="nav-item"><a href="gallery.html" class="nav-link"><font style="color: black;">Gallery</font></a></li>
+	        	<li class="nav-item"><a href="#" class="nav-link"><font style="color: black;">Forms</font></a></li>
 	        	<li class="nav-item"><a href="download.html" class="nav-link"><font style="color: black;">Downloads</font></a></li>
             <li class="nav-item"><a href="donate.html" class="nav-link"><font style="color: black;">Donate</font></a></li>
 	          <li class="nav-item"><a href="index.html#contact" class="nav-link"><font style="color: black;">Contact</font></a></li>
