--- a/index.html
+++ b/index.html
@@ -66,11 +66,53 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
 
   firebase.initializeApp(firebaseConfig);
 </script>
-<script>
+<!-- <script>
   $(document).ready(function(){
       $("#myModal").modal('show');
   });
-</script>
+</script> -->
+<style>
+/* .dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 8px;
+  border: none;
+} */
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: transparent;}
+</style>
   </head>
   <body ng-app="">
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -83,8 +125,22 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	        	<li class="nav-item active"><a href="index.html" class="nav-link"><font style="color: black;">Home</font></a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link"><font style="color: black;">About</font></a></li>
-	        	<li class="nav-item"><a href="#" class="nav-link"><font style="color: black;">Forms</font></a></li>
+	        	<div class="dropdown">
+                <a class="nav-item" style="color: black; margin-top: 30px;">About Us</a>
+                <div class="dropdown-content">
+                  <a href="#">Patiala School For Deaf</a>
+                  <a href="#">Patiala School For Blind</a>
+                  <a href="#">Patiala School For Deaf Blind</a>
+                </div>
+              </div>
+              &nbsp;&nbsp;&nbsp;
+              <div class="dropdown">
+                  <a class="nav-item" style="color: black; margin-top: 30px;">Forms</a>
+                  <div class="dropdown-content">
+                    <a href="#">Admission Form</a>
+                    <a href="#">Sponsorship Form</a>
+                  </div>
+                </div>
 	        	<li class="nav-item"><a href="download.html" class="nav-link"><font style="color: black;">Downloads</font></a></li>
             <li class="nav-item"><a href="donate.html" class="nav-link"><font style="color: black;">Donate</font></a></li>
 	          <li class="nav-item"><a href="index.html#contact" class="nav-link"><font style="color: black;">Contact</font></a></li>
@@ -543,11 +599,11 @@ $("#donatebutton_text").html(" &nbsp;&nbsp;&nbsp;❤ Donate Now");
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">Links</h2>
+              <h2 class="ftco-heading-2">Quick Links</h2>
               <ul class="list-unstyled">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <!-- <li><a href="about.html">About Us</a></li>
+                <li><a href="gallery.html">Gallery</a></li> -->
                 <li><a href="download.html">Downloads</a></li>
                 <li><a href="donate.html">Donate</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
